[package]
name = "rust_dns"
version = "0.1.0"
edition = "2024"
authors = ["Lokai Kuroi <lokai.kuroi@gmail.com>"]
license = "Apache 2.0"
description = "Implementation of a DNS-Server written in rust."
readme = "README.md"
homepage = "https://github.com/lokai-kuroi/rust-dns"
repository = "https://github.com/lokai-kuroi/rust-dns"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
human-panic = "2.0.8"
exitcode = "1.1.2"
anyhow = "1.0"
